--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
     <button title="Click to start a new test">Start new test</button>
 
-    <button id="my-phrase-btn" title="Go to My English Phrase" onclick="window.location.href='myphrase.php';">My English Phrase</button>
+    <button id="my-phrase-btn" title="Go to My English Phrase" onclick="window.location.href='/myphrase.php';">My English Phrase</button>
+
 
     <div>
       <p class="phrase">Phrase...</p>
