--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <button title="Click to start a new test">Start new test</button>
 
-    <button id="my-phrase-btn" title="Go to My English Phrase" onclick="window.location.href='/Englishphrase/myphrase.php';">My English Phrase</button>
+    <button id="my-phrase-btn" title="Go to My English Phrase" onclick="window.location.href='https://chontisa.github.io/Englishphrase/myphrase.php';">My English Phrase</button>
 
     <div>
       <p class="phrase">Phrase...</p>
